# kagoiri-musume

./: AUTHORS  COPYING  ChangeLog  DIST  DIST_EXCLUDE_X  INSTALL  Makefile.in  README  VERSION  app-servers  configure  configure.ac  configure.lineno  initdb.scm  kagoiri-musume-start.in  kagoiri-musume-stop.in  kagoiri-musume.conf.in
kagoiri-musume/: class.kahua  club.kahua  debug-support.kahua  email.kahua  fan.kahua  file.kahua  fixed4ie.css  gadget.kahua  group.kahua  hidden.kahua  kagoiri-musume.css  kagoiri-musume.kahua  local.kahua  messages.kahua  migration.kahua  musume.kahua  mypage.kahua  page.kahua  parts-collection.kahua  search.kahua  song.kahua  sys-admin.kahua  unit.kahua  user-setting.kahua  util.kahua  version.kahua.in  widget.kahua
kagoiri-musume/javascripts/: async.js  kagoiri-musume.js  kagoiri-musume.js.scm
kagoiri-musume/msgs/ja/: kagoiri-musume.po
plugins/: async.scm  calendar.scm  css.scm  csv.scm  kagoiri-musume.scm  sendmail-with-headers.scm  sendmail.scm  upload.scm
test/: basic-operate.scm  change-password.scm  common-test.scm  common.scm.in  login-logout.scm  melody-list.scm  melody-operate.scm  musume-list.scm  musume-operate.scm  parts.scm  sample.csv  system-admin.scm  test.conf  test.conf.in  test.scm.in  test1.scm  test1.scm.in  test2.scm  test2.scm.in  test3.scm  test3.scm.in  test4.scm  unit-list.scm  unit-operate.scm
updates/: changeclass.scm  update0_0_2_to_0_0_3.scm  update0_0_4_to_0_1_0.scm
